--- a/dice_app/index.html
+++ b/dice_app/index.html
@@ -14,7 +14,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>dicee</title>
+  <title>DICE by Sam😉</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
