--- a/dice_app/index.html
+++ b/dice_app/index.html
@@ -27,6 +27,8 @@
         navigator.serviceWorker.register('flutter_service_worker.js');
       });
     }
+
+document.title = "DICE by Sam😉";
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
