--- a/dice_app/index.html
+++ b/dice_app/index.html
@@ -28,8 +28,8 @@
       });
     }
 
-document.title = "DICE by Sam😉";
+
   </script>
-  <script src="main.dart.js" type="application/javascript"></script>
+  <script src="main.dart.js" type="application/javascript"> document.title = "DICE by Sam😉"; </script>
 </body>
 </html>
