--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Sameer Tuteja">
+  <meta name="google-site-verification" content="HR6IDlxM8QxY2Z9kr3iTyR-1_5no8CJicYWtIaTOE3U" />
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
