--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <title>About Sameer Tuteja</title>
   <link rel="manifest" href="manifest.json">
+  <style>p {text-align: center;}</style>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
@@ -30,6 +31,6 @@
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
-  © Sameer Tuteja
+  <p>© Sameer Tuteja</p>
 </body>
 </html>
