--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <style>p {text-align: center;}</style>
 </head>
 <body>
+  <p>© Sameer Tuteja</p>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
