--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Sameer Tuteja">
   <meta name="google-site-verification" content="HR6IDlxM8QxY2Z9kr3iTyR-1_5no8CJicYWtIaTOE3U" />
+  <meta name="keywords" content="GitHub,Code,Sameer,Tuteja,Profile">
+  <meta name="author" content="Sameer Tuteja">   
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -20,7 +22,14 @@
   <style>p {text-align: center;}</style>
 </head>
 <body>
+  <p align="center"><img align="center" src="https://cultofthepartyparrot.com/guests/hd/partygopher.gif"/></p>
   <p>© Sameer Tuteja</p>
+  <noscript>
+      <strong><br><br>        
+        This site is built with Vue JS, so requires JavaScript. <br>
+        Please enable it to continue.
+      </strong>
+    </noscript>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
