--- a/xylophone/index.html
+++ b/xylophone/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Xylophone by Sam">
+  <meta name="keywords" content="GitHub,Sameer,Tuteja,The App Brewery,Xylophone,Music Player,Tunes,Angela">
+  <meta name="author" content="Sameer Tuteja"> 
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -18,6 +20,13 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <p>© Sameer Tuteja</p>
+  <noscript>
+      <strong><br><br>        
+        This site is built with Vue JS, so requires JavaScript. <br>
+        Please enable it to continue.
+      </strong>
+    </noscript>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
