--- a/schon_quotes/index.html
+++ b/schon_quotes/index.html
@@ -23,7 +23,7 @@
   <p>© Sameer Tuteja</p>
   <noscript>
       <strong><br><br>        
-        This site is built with Vue JS, so requires JavaScript. <br>
+        This site is built with Dart, so requires JavaScript. <br>
         Please enable it to continue.
       </strong>
     </noscript>
