--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <p align="center"><img align="center" src="https://cultofthepartyparrot.com/guests/hd/partygopher.gif"/></p>
   <p>© Sameer Tuteja</p>
   <noscript>
-    <p>
+    <p align="center">
       <strong><br><br>        
         This site is built with Dart, so requires JavaScript. <br>
         Please enable it to continue.
