--- a/projects/cal_ver_tor/index.html
+++ b/projects/cal_ver_tor/index.html
@@ -20,7 +20,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <p>© Sameer Tuteja</p>
+  <p align="center">© Sameer Tuteja</p>
   <noscript>
       <strong><br><br>        
         This site is built with Dart, so requires JavaScript. <br>
