--- a/projects/cal_ver_tor/index.html
+++ b/projects/cal_ver_tor/index.html
@@ -16,7 +16,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>cal_ver_tor</title>
+  <title>CalVerTor</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
