--- a/projects/cal_ver_tor/index.html
+++ b/projects/cal_ver_tor/index.html
@@ -22,11 +22,13 @@
 <body>
   <p align="center">© Sameer Tuteja</p>
   <noscript>
+    <p align="center">
       <strong><br><br>        
         This site is built with Dart, so requires JavaScript. <br>
         Please enable it to continue.
       </strong>
-    </noscript>
+    </p>
+  </noscript>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
