--- a/projects/cal_ver_tor/index.html
+++ b/projects/cal_ver_tor/index.html
@@ -19,10 +19,11 @@
   <title>Cal Ver Tor</title>
   <link rel="manifest" href="manifest.json">
 </head>
-<body>
-  <p align="center">© Sameer Tuteja</p>
+<body style="background-color:black;">
+  <p align="center"><img align="center" src="https://media.giphy.com/media/WiIuC6fAOoXD2/giphy.gif"/></p>  
+  <p align="center" style="color:white;">© Sameer Tuteja</p>
   <noscript>
-    <p align="center">
+    <p align="center" style="color:white;">
       <strong><br><br>        
         This site is built with Dart, so requires JavaScript. <br>
         Please enable it to continue.
