--- a/projects/cal_ver_tor/index.html
+++ b/projects/cal_ver_tor/index.html
@@ -20,7 +20,8 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body style="background-color:black;">
-  <p align="center"><img align="center" src="https://media.giphy.com/media/WiIuC6fAOoXD2/giphy.gif"/></p>  
+<!--   <p align="center"><img align="center" src="https://media.giphy.com/media/WiIuC6fAOoXD2/giphy.gif"/></p>  -->
+  <p align="center"><img align="center" src="loading.webp"/></p>  
   <p align="center" style="color:white;">© Sameer Tuteja</p>
   <noscript>
     <p align="center" style="color:white;">
