--- a/projects/cal_ver_tor/index.html
+++ b/projects/cal_ver_tor/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="CalVerTor, A calculator and a unit converter by Sameer Tuteja">
-  <meta name="keywords" content="GitHub,calculator,Sameer,Tuteja,convertor,unit converter,maths,mathematics">
+  <meta name="description" content="CalVerTor by Sameer Tuteja">
+  <meta name="keywords" content="GitHub,calculator,Sameer,Tuteja,convertor">
   <meta name="author" content="Sameer Tuteja"> 
 
   <!-- iOS meta tags & icons -->
