--- a/projects/cal_ver_tor/index.html
+++ b/projects/cal_ver_tor/index.html
@@ -18,6 +18,7 @@
 
   <title>Cal Ver Tor</title>
   <link rel="manifest" href="manifest.json">
+  <script src="pwaDownload.js" defer></script>
 </head>
 <body style="background-color:black;">
 <!--   <p align="center"><img align="center" src="https://media.giphy.com/media/WiIuC6fAOoXD2/giphy.gif"/></p>  -->
