--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=4119727572');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=2411627706');
       });
     }
   </script>
-  <script src="main.dart.js?v=4119727572" type="application/javascript"></script>  
+  <script src="main.dart.js" type="application/javascript"></script>  
 </body>
 </html>
