--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
   <p align="center"><img align="center" src="https://cultofthepartyparrot.com/guests/hd/partygopher.gif"/></p>
+  <p>Loading Please Wait...</p>
   <p>© Sameer Tuteja</p>
   <noscript>
     <p align="center">
