--- a/projects/index.html
+++ b/projects/index.html
@@ -5,9 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <link rel="profile" href="https://gmpg.org/xfn/11"> 
 	 <title>Projects &#8211; About Sameer Tuteja</title>
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="max-image-preview:large">
 
 		<!-- Meta Tag Manager -->
+		<meta name="og:type" content="webssite">
+		<meta name="og:title" content="Projects">
+		<meta name="og:description" content="Projects ROS Micro-ROS based Air Quality Monitor About To detect air quality and publish data on ROS topics. More Info. Connect ESP32 to ROS2 About Sample project to publish data from ESP32 to ROS topics over WiFi. More Info. O3R Colored Pointcloud About This package allows user to visualize 3D colored pointcloud using ifm O3R [&hellip;]">
+		<meta name="og:locale" content="en_US">
+		<meta name="og:site_name" content="About Sameer Tuteja">
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="@sameert009">
 		<meta name="author" content="Sameer Tuteja">
 		<meta name="description" content="About Sameer Tuteja">
 		<meta name="keywords" content="Sameer,Tuteja,Profile,Projects,About,Resume,CV">
