--- a/index.html
+++ b/index.html
@@ -1,131 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>About Sameer Tuteja</title>
-    <meta charset="utf-8" />
-    <meta name="description" content="About Sameer Tuteja" />
-    <meta name="keywords" content="Sameer,Tuteja,Profile,Projects,About,Resume,CV" />
-    <meta name="author" content="Sameer Tuteja" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link type="text/css" href="./styles.css" rel="stylesheet" />
-    <link rel="shortcut icon" type="image/png" href="favicon.png" />
-    <link rel="apple-touch-icon" href="favicon.png" />
-    <meta name="google-site-verification" content="HR6IDlxM8QxY2Z9kr3iTyR-1_5no8CJicYWtIaTOE3U" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="background_color" content="#ffffff" />
-  </head>
-  <body>
-    <div id="myModal" class="modal">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <h1>House Rules 🏡</h1>
-        <p>
-          Roam around my home office.🐈
-          <br /><br />
-          <b>Tap the blue dots to jump to locations</b>
-          <br /><br />
-          You can use ZOOM 🔍 feature too, <br />& if you get lost, hit the
-          <b>Bring me back</b> button. <br /><br />
-          <br /><br />Prefer
-          <a class="hrefStyle" href="firefox://open-url?url=https://sam-tj.github.io/"
-            ><b>firefox</b></a
+<html>
+  <style>
+    .center {
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+    }
+    .modernColor {
+      background-color: #01928b;
+    }
+
+    .standardDesign {
+      background-color: #f5f3c7;
+    }
+
+    .defaultDesign {
+      background-color: orange;
+    }
+  </style>
+  <body id="bodyBackground" class="defaultDesign">
+    <div class="center">
+      <svg
+        width="100%"
+        height="100%"
+        viewBox="0 0 400.15549 113.72143"
+        version="1.1"
+        id="svg964"
+        inkscape:version="1.1 (c68e22c387, 2021-05-23)"
+        sodipodi:docname="1arrow_test.svg"
+        xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+        xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:svg="http://www.w3.org/2000/svg"
+      >
+        <sodipodi:namedview
+          id="namedview966"
+          pagecolor="#505050"
+          bordercolor="#eeeeee"
+          borderopacity="1"
+          inkscape:pageshadow="0"
+          inkscape:pageopacity="0"
+          inkscape:pagecheckerboard="0"
+          inkscape:document-units="mm"
+          showgrid="true"
+          inkscape:snap-grids="true"
+          inkscape:zoom="0.59377077"
+          inkscape:cx="920.38886"
+          inkscape:cy="173.46762"
+          inkscape:window-width="1846"
+          inkscape:window-height="1057"
+          inkscape:window-x="-8"
+          inkscape:window-y="-8"
+          inkscape:window-maximized="1"
+          inkscape:current-layer="layer1"
+          fit-margin-top="0"
+          fit-margin-left="0"
+          fit-margin-right="0"
+          fit-margin-bottom="0"
+        >
+          <inkscape:grid
+            type="xygrid"
+            id="grid20088"
+            dotted="true"
+            spacingx="1"
+            spacingy="1"
+            originx="72.836027"
+            originy="-101.38764"
+          />
+        </sodipodi:namedview>
+        <defs id="defs961">
+          <rect x="552.61322" y="509.68423" width="325.47983" height="51.905056" id="rect6961" />
+          <rect x="552.61322" y="509.68423" width="325.47983" height="51.905056" id="rect6961-8" />
+        </defs>
+        <g
+          inkscape:label="Layer 1"
+          inkscape:groupmode="layer"
+          id="layer1"
+          transform="translate(72.836026,-101.38763)"
+        >
+          <path
+            style="fill: #000000; stroke-width: 0.289967"
+            d="m 20.17502,214.59706 c -0.595988,-0.27495 -2.61793,-1.86995 -4.493245,-3.54451 -1.875372,-1.67457 -8.4361881,-7.54642 -14.5796237,-13.04856 -6.1434357,-5.50214 -12.7987673,-11.45416 -14.7896023,-13.22674 -4.849657,-4.31791 -5.903815,-5.50754 -6.517485,-7.35508 -0.875326,-2.63538 -0.259715,-5.90206 1.510515,-8.01843 0.532559,-0.63685 3.476138,-3.29605 19.3750923,-17.50461 5.0860206,-4.54526 11.3968277,-10.19214 14.0240027,-12.54867 4.125927,-3.70082 4.991666,-4.34706 6.354285,-4.74319 2.669868,-0.77613 5.207777,0.0125 7.081041,2.20133 1.539221,1.79823 1.672563,2.63616 1.672563,10.51224 0,6.49907 0.04564,7.13848 0.528554,7.5763 0.488609,0.44198 7.88679,0.48381 97.646653,0.55237 l 97.11824,0.0742 1.1796,0.63142 c 0.64884,0.34727 1.65271,1.15505 2.23094,1.79502 1.72392,1.90821 1.95385,3.20863 1.95385,11.0517 0,6.91449 0.0895,7.54451 1.07403,7.54451 0.20777,0 3.60712,-2.90688 7.55365,-6.45974 3.94653,-3.55287 10.69867,-9.58104 15.00469,-13.39595 16.18813,-14.34185 15.22331,-13.39957 15.22331,-14.86758 0,-0.98642 -0.2209,-1.3178 -2.10226,-3.15319 -1.15628,-1.12803 -3.27664,-3.07546 -4.71199,-4.32764 -3.1889,-2.78195 -4.12929,-3.61968 -18.09392,-16.11786 -13.65566,-12.22176 -12.62919,-11.37551 -13.33801,-10.99616 -0.53654,0.28712 -0.57183,0.71042 -0.66064,7.91622 -0.0891,7.20111 -0.12836,7.67762 -0.73417,8.80993 -0.83138,1.55428 -2.93713,3.39461 -4.37811,3.82635 -0.86203,0.25828 -23.59447,0.341 -93.69902,0.341 H 39.047056 l -0.847583,-0.84761 c -1.157177,-1.15719 -1.1577,-2.56573 -0.0014,-3.8598 l 0.8461,-0.94696 92.450397,-0.0664 c 86.89155,-0.0624 92.47224,-0.0962 92.81348,-0.56287 0.26769,-0.36611 0.36359,-2.40501 0.36587,-7.76276 0.003,-7.01317 0.0285,-7.31718 0.68348,-8.72796 1.57575,-3.38391 5.73417,-4.92098 9.00858,-3.32983 0.64838,0.31509 5.95011,4.84946 11.78148,10.07638 5.83143,5.22693 14.08759,12.61782 18.34697,16.42419 4.25933,3.80638 8.2029,7.45646 8.76342,8.11131 1.92509,2.24901 2.34857,5.75909 1.04924,8.69643 -0.68192,1.54157 -1.19885,2.05733 -9.46162,9.43989 -3.50101,3.12806 -7.54606,6.7435 -8.98899,8.03431 -1.44299,1.29082 -6.64643,5.94577 -11.56327,10.34433 -4.91689,4.39855 -9.41864,8.23069 -10.00388,8.51583 -1.51326,0.73725 -4.21201,0.68818 -5.72345,-0.10407 -1.56029,-0.81783 -3.20202,-2.67168 -3.58395,-4.04692 -0.17809,-0.64204 -0.30824,-4.10681 -0.30938,-8.23966 -0.003,-6.53043 -0.0456,-7.1721 -0.53028,-7.60996 -0.48803,-0.44197 -7.88678,-0.48381 -97.64662,-0.55236 l -97.118251,-0.0743 -1.159866,-0.62703 c -1.367299,-0.73915 -2.765998,-2.16082 -3.519618,-3.5775 -0.478913,-0.90014 -0.550257,-1.8664 -0.630745,-8.5464 -0.09071,-7.50758 -0.194641,-8.27173 -1.128192,-8.27173 -0.232886,0 -4.229193,3.42767 -8.880999,7.61709 -7.4936122,6.74863 -11.3999091,10.22922 -24.928268,22.21149 -1.882001,1.6669 -3.545711,3.26222 -3.697092,3.54512 -0.151264,0.28296 -0.275129,0.96522 -0.275129,1.5162 0,1.11152 0.787432,1.96386 6.0893315,6.59103 1.5150759,1.32229 3.7985696,3.3446 5.0744364,4.49404 1.2758517,1.14944 5.712361,5.13534 9.8589001,8.85758 4.14654,3.72224 9.170229,8.25702 11.163752,10.07727 4.854226,4.43234 5.440489,4.86777 6.043091,4.48837 0.422397,-0.26582 0.498887,-1.24139 0.626167,-7.95607 l 0.144926,-7.6531 0.844167,-1.52359 c 0.91916,-1.65888 2.285951,-2.86124 3.914163,-3.44324 0.835372,-0.29857 14.177478,-0.37467 67.530519,-0.38483 73.000217,-0.013 67.714197,-0.14692 68.488817,1.72306 0.48861,1.17994 0.0999,2.51463 -0.96436,3.30915 l -0.81631,0.60943 -66.308863,0.068 c -62.127593,0.0636 -66.331667,0.0993 -66.671293,0.56288 -0.266567,0.36416 -0.364179,2.41393 -0.368743,7.76112 -0.0058,6.68628 -0.05131,7.3704 -0.597921,8.57112 -0.76852,1.69522 -1.549382,2.50879 -3.228108,3.36334 -1.669261,0.84968 -4.185699,0.92822 -5.805131,0.18116 z M 264.48768,193.8065 c -0.90946,-0.39202 -1.83102,-1.709 -1.83102,-2.61667 0,-0.82738 0.80773,-2.05336 1.58671,-2.40828 0.5744,-0.26171 8.37887,-0.34642 31.91819,-0.34642 h 31.15791 v 2.89696 2.89695 l -30.95407,-0.0117 c -25.58063,-0.01 -31.11439,-0.0813 -31.87772,-0.41036 z M -72.836026,125.22907 v -2.89281 l 38.832335,0.0657 38.832326,0.0657 0.7331965,0.68884 c 0.4035566,0.37883 0.812652,1.05038 0.9096967,1.49229 0.2197598,0.99939 -0.4754828,2.73864 -1.2626239,3.15992 -0.4109697,0.21999 -12.1264041,0.31331 -39.3151703,0.31331 h -38.72976 z"
+            id="path932"
+            sodipodi:nodetypes="csscscscscscscccssssssscsccsscsscssccsssssssssscccccsccscscssssscccssccscccccscccsssccccccccccccccsc"
+          />
+          <a href="modernIndex.html" onmouseover="modernDesign()" onmouseleave="defaultDesign()">
+            <text
+              xml:space="preserve"
+              transform="matrix(0.26458333,0,0,0.26458333,-3.1868137,0.39886832)"
+              id="text6959"
+              style="
+                font-style: normal;
+                font-variant: normal;
+                font-weight: normal;
+                font-stretch: normal;
+                font-size: 40px;
+                line-height: 1.25;
+                font-family: 'MV Boli';
+                -inkscape-font-specification: 'MV Boli';
+                white-space: pre;
+                shape-inside: url(#rect6961);
+              "
+            >
+              <tspan x="552.61328" y="545.0728" id="tspan43650">Modern design</tspan>
+            </text>
+          </a>
+          <a
+            href="about_content/index.html"
+            onmouseover="standardDesign()"
+            onmouseleave="defaultDesign()"
           >
-          or
-          <a class="hrefStyle" href="googlechromes://https://sam-tj.github.io/"><b>chrome</b></a
-          >... <br /><br />
-          <a class="hrefStyle" href="about_content/index.html">
-            Tap 🔴 to view the profile directly.</a
-          >
-        </p>
-      </div>
+            <text
+              xml:space="preserve"
+              transform="matrix(0.26458333,0,0,0.26458333,-107.85714,34.037409)"
+              id="text6959-0"
+              style="
+                font-style: normal;
+                font-variant: normal;
+                font-weight: normal;
+                font-stretch: normal;
+                font-size: 40px;
+                line-height: 1.25;
+                font-family: 'MV Boli';
+                -inkscape-font-specification: 'MV Boli';
+                white-space: pre;
+                shape-inside: url(#rect6961-8);
+              "
+            >
+              <tspan x="552.61328" y="545.0728" id="tspan43652">Standard design</tspan>
+            </text>
+          </a>
+        </g>
+        Sorry, your browser does not support inline SVG.
+      </svg>
     </div>
-    <div id="progressBarContent" class="progressBarContent blur_filter">
-      <div class="progressBarImage">
-        <img
-          src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3R6eXN3cm1uYndqejBwOTdnazY0MGJtcG15NWxjOHh3Y2x3bWprbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Pjr0NCGk4WMQPQtg0C/giphy-downsized.gif"
-          alt=""
-        />
-        <div class="centered">Cleaning room</div>
-      </div>
-      <div class="progressBarEmoji">
-        <div id="progressBarEmoji" class="progressBarEmojiTranslate">
-          <img src="walking_goose.gif" />
-        </div>
-      </div>
-    </div>
-    <!-- <model-viewer> HTML element -->
-    <model-viewer
-      id="model_viewer_window"
-      src="homeOffice.glb"
-      autoplay
-      ar-modes="webxr scene-viewer quick-look"
-      disable-pan
-      camera-controls
-      tone-mapping="neutral"
-      shadow-intensity="1"
-      min-field-of-view="45deg"
-      max-field-of-view="55deg"
-      field-of-view="50deg"
-      camera-orbit="3.664142324173232rad 1.3962634015954636rad 6.0m"
-      min-camera-orbit="2.878267294859932rad 1.1292184887220118rad 6.0m"
-      max-camera-orbit="3.824369271897301rad 1.548860494666006rad 6.0m"
-      camera-target="0.650m 0.178m 1.450m"
-      zoom-sensitivity="0.1"
-      class="blur_filter"
-    >
-      <button
-        class="Hotspot ProfileHotspot"
-        slot="hotspot-1"
-        name="login"
-        data-surface="5 0 2893 2895 2894 0.272 0.223 0.504"
-        data-visibility-attribute="visible"
-      >
-        <div id="login" class="HotspotAnnotation">Login</div>
-      </button>
-      <button
-        class="Hotspot"
-        slot="hotspot-2"
-        name="teaTime"
-        data-surface="7 0 1852 1853 1854 0.538 0.362 0.100"
-        data-visibility-attribute="visible"
-      >
-        <div id="teaTime" class="HotspotAnnotation">Tea Time</div>
-      </button>
-      <button
-        class="Hotspot"
-        slot="hotspot-3"
-        name="skyView"
-        data-surface="17 0 17 19 18 0.476 0.003 0.521"
-        data-visibility-attribute="visible"
-      >
-        <div id="skyView" class="HotspotAnnotation">Sky view</div>
-      </button>
-      <div class="progress-bar" slot="progress-bar">
-        <div class="update-bar"></div>
-      </div>
-      <!-- <button slot="ar-button" id="ar-button">View in your space</button>
-        <div id="ar-prompt">
-          <img src="ar_hand_prompt.png" />
-        </div> -->
-    </model-viewer>
-    <div id="bringMeBack" class="blur_filter">
-      <button class="reset_button" id="reset_view">Bring me back</button>
-    </div>
-    <div id="helpButton" class="helpButton blur_filter">ℹ️</div>
-    <div id="about_page" class="iframeStyle">
-      <iframe style="height: 100%; width: 100%" src="about_content/index.html"> </iframe>
-    </div>
-    <div class="footer">
-      <a class="hrefStyle" href="https://www.ikea.com/"
-        >Furniture virtually purchased from <b>IKEA</b>.</a
-      ><br />© Sameer Tuteja
-    </div>
-    <script src="script.js"></script>
-    <!-- Loads <model-viewer> for browsers: -->
-    <script
-      type="module"
-      src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"
-    ></script>
   </body>
+  <script>
+    function modernDesign() {
+      document.getElementById("bodyBackground").classList.remove("defaultDesign");
+      document.getElementById("bodyBackground").classList.add("modernColor");
+    }
+    function standardDesign() {
+      document.getElementById("bodyBackground").classList.remove("defaultDesign");
+      document.getElementById("bodyBackground").classList.add("standardDesign");
+    }
+    function defaultDesign() {
+      document.getElementById("bodyBackground").classList.remove("standardDesign");
+      document.getElementById("bodyBackground").classList.remove("modernColor");
+      document.getElementById("bodyBackground").classList.add("defaultDesign");
+    }
+  </script>
 </html>
