--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>About Sameer Tuteja</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="About Sameer Tuteja" />
+    <meta name="keywords" content="Sameer,Tuteja,Profile,Projects,About,Resume,CV" />
+    <meta name="author" content="Sameer Tuteja" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link rel="apple-touch-icon" href="favicon.png" />
+    <meta name="google-site-verification" content="HR6IDlxM8QxY2Z9kr3iTyR-1_5no8CJicYWtIaTOE3U" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="background_color" content="#ffffff" />
+  </head>
   <style>
     :root {
       --timeout: 0.1s;
@@ -44,6 +57,10 @@
       color: black;
       text-align: center;
       z-index: 1;
+    }
+    @font-face {
+      font-family: MV Boli;
+      src: url(MVBOLI.TTF);
     }
   </style>
   <body id="bodyBackground" class="defaultDesign" onload="defaultDesign()">
